--- a/politiprocess/Politiprocess_Library.ipynb
+++ b/politiprocess/Politiprocess_Library.ipynb
@@ -348,7 +348,137 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting textacy\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/41/9f/22b9dec63bff5e6ef7fb47b2cd37025087c3995b6ca5467d78160f5b0eb3/textacy-0.6.1-py2.py3-none-any.whl (137kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 143kB 2.3MB/s ta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: networkx>=1.11 in /opt/conda/lib/python3.6/site-packages (from textacy) (2.1)\n",
+      "Collecting pyphen>=0.9.4 (from textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/dd/c4/74859f895e2361d92cfbb6208ea7afd06c2f1f05c491da71cbd7ce3887be/Pyphen-0.9.4-py2.py3-none-any.whl (1.9MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 2.0MB 1.9MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: cytoolz>=0.8.0 in /opt/conda/lib/python3.6/site-packages (from textacy) (0.9.0.1)\n",
+      "Requirement already satisfied: scikit-learn>=0.17.0 in /opt/conda/lib/python3.6/site-packages (from textacy) (0.18.2)\n",
+      "Collecting cachetools>=2.0.0 (from textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/ac/e8/5492fd5ada0b05a1bc485bcb634b559acdec59383eef5c4203b5e22be296/cachetools-2.0.1-py2.py3-none-any.whl\n",
+      "Collecting python-levenshtein>=0.12.0 (from textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/42/a9/d1785c85ebf9b7dfacd08938dd028209c34a0ea3b1bcdb895208bd40a67d/python-Levenshtein-0.12.0.tar.gz (48kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 51kB 2.8MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: requests>=2.10.0 in /opt/conda/lib/python3.6/site-packages (from textacy) (2.18.4)\n",
+      "Collecting unidecode>=0.04.19 (from textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/59/ef/67085e30e8bbcdd76e2f0a4ad8151c13a2c5bce77c85f8cad6e1f16fb141/Unidecode-1.0.22-py2.py3-none-any.whl (235kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 235kB 3.1MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting ijson>=2.3 (from textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/7f/e9/8508c5f4987ba238a2b169e582c1f70a47272b22a2f1fb06b9318201bb9e/ijson-2.3-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: scipy>=0.17.0 in /opt/conda/lib/python3.6/site-packages (from textacy) (0.19.1)\n",
+      "Collecting spacy>=2.0.0 (from textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/3c/31/e60f88751e48851b002f78a35221d12300783d5a43d4ef12fbf10cca96c3/spacy-2.0.11.tar.gz (17.6MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 17.6MB 144kB/s eta 0:00:01   13% |████▎                           | 2.4MB 7.1MB/s eta 0:00:03    27% |████████▊                       | 4.8MB 4.8MB/s eta 0:00:03    64% |████████████████████▋           | 11.3MB 8.1MB/s eta 0:00:01    65% |████████████████████▉           | 11.4MB 880kB/s eta 0:00:07    73% |███████████████████████▊        | 13.0MB 4.3MB/s eta 0:00:02\n",
+      "\u001b[?25hCollecting pyemd>=0.3.0 (from textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/c0/c5/7fea8e7a71cd026b30ed3c40e4c5ea13a173e28f8855da17e25271e8f545/pyemd-0.5.1.tar.gz (91kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 92kB 3.6MB/s eta 0:00:01\n",
+      "\u001b[?25hCollecting ftfy<5.0.0,>=4.2.0 (from textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/21/5d/9385540977b00df1f3a0c0f07b7e6c15b5e7a3109d7f6ae78a0a764dab22/ftfy-4.4.3.tar.gz (50kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 51kB 1.3MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting tqdm>=4.11.1 (from textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/78/bc/de067ab2d700b91717dc5459d86a1877e2df31abfb90ab01a5a5a5ce30b4/tqdm-4.23.0-py2.py3-none-any.whl (42kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 51kB 2.4MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: numpy<2.0.0,>=1.9.0 in /opt/conda/lib/python3.6/site-packages (from textacy) (1.12.1)\n",
+      "Requirement already satisfied: decorator>=4.1.0 in /opt/conda/lib/python3.6/site-packages (from networkx>=1.11->textacy) (4.2.1)\n",
+      "Requirement already satisfied: toolz>=0.8.0 in /opt/conda/lib/python3.6/site-packages (from cytoolz>=0.8.0->textacy) (0.9.0)\n",
+      "Requirement already satisfied: setuptools in /opt/conda/lib/python3.6/site-packages (from python-levenshtein>=0.12.0->textacy) (39.0.1)\n",
+      "Requirement already satisfied: chardet<3.1.0,>=3.0.2 in /opt/conda/lib/python3.6/site-packages (from requests>=2.10.0->textacy) (3.0.4)\n",
+      "Requirement already satisfied: idna<2.7,>=2.5 in /opt/conda/lib/python3.6/site-packages (from requests>=2.10.0->textacy) (2.6)\n",
+      "Requirement already satisfied: urllib3<1.23,>=1.21.1 in /opt/conda/lib/python3.6/site-packages (from requests>=2.10.0->textacy) (1.22)\n",
+      "Requirement already satisfied: certifi>=2017.4.17 in /opt/conda/lib/python3.6/site-packages (from requests>=2.10.0->textacy) (2018.1.18)\n",
+      "Collecting murmurhash<0.29,>=0.28 (from spacy>=2.0.0->textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/5e/31/c8c1ecafa44db30579c8c457ac7a0f819e8b1dbc3e58308394fff5ff9ba7/murmurhash-0.28.0.tar.gz\n",
+      "Collecting cymem<1.32,>=1.30 (from spacy>=2.0.0->textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/f8/9e/273fbea507de99166c11cd0cb3fde1ac01b5bc724d9a407a2f927ede91a1/cymem-1.31.2.tar.gz\n",
+      "Collecting preshed<2.0.0,>=1.0.0 (from spacy>=2.0.0->textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/1b/ac/7c17b1fd54b60972785b646d37da2826311cca70842c011c4ff84fbe95e0/preshed-1.0.0.tar.gz (89kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 92kB 2.7MB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting thinc<6.11.0,>=6.10.1 (from spacy>=2.0.0->textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/55/fd/e9f36081e6f53699943381858848f3b4d759e0dd03c43b98807dde34c252/thinc-6.10.2.tar.gz (1.2MB)\n",
+      "\u001b[K    100% |████████████████████████████████| 1.2MB 1.3MB/s ta 0:00:011\n",
+      "\u001b[?25hCollecting plac<1.0.0,>=0.9.6 (from spacy>=2.0.0->textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/9e/9b/62c60d2f5bc135d2aa1d8c8a86aaf84edb719a59c7f11a4316259e61a298/plac-0.9.6-py2.py3-none-any.whl\n",
+      "Collecting pathlib (from spacy>=2.0.0->textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/ac/aa/9b065a76b9af472437a0059f77e8f962fe350438b927cb80184c32f075eb/pathlib-1.0.1.tar.gz (49kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 51kB 992kB/s ta 0:00:01\n",
+      "\u001b[?25hCollecting ujson>=1.35 (from spacy>=2.0.0->textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/16/c4/79f3409bc710559015464e5f49b9879430d8f87498ecdc335899732e5377/ujson-1.35.tar.gz (192kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 194kB 3.5MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: dill<0.3,>=0.2 in /opt/conda/lib/python3.6/site-packages (from spacy>=2.0.0->textacy) (0.2.7.1)\n",
+      "Collecting regex==2017.4.5 (from spacy>=2.0.0->textacy)\n",
+      "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/36/62/c0c0d762ffd4ffaf39f372eb8561b8d491a11ace5a7884610424a8b40f95/regex-2017.04.05.tar.gz (601kB)\n",
+      "\u001b[K    100% |████████████████████████████████| 604kB 1.5MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: html5lib in /opt/conda/lib/python3.6/site-packages (from ftfy<5.0.0,>=4.2.0->textacy) (1.0.1)\n",
+      "Requirement already satisfied: wcwidth in /opt/conda/lib/python3.6/site-packages (from ftfy<5.0.0,>=4.2.0->textacy) (0.1.7)\n",
+      "Collecting wrapt (from thinc<6.11.0,>=6.10.1->spacy>=2.0.0->textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/a0/47/66897906448185fcb77fc3c2b1bc20ed0ecca81a0f2f88eda3fc5a34fc3d/wrapt-1.10.11.tar.gz\n",
+      "Requirement already satisfied: six<2.0.0,>=1.10.0 in /opt/conda/lib/python3.6/site-packages (from thinc<6.11.0,>=6.10.1->spacy>=2.0.0->textacy) (1.11.0)\n",
+      "Collecting termcolor (from thinc<6.11.0,>=6.10.1->spacy>=2.0.0->textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/8a/48/a76be51647d0eb9f10e2a4511bf3ffb8cc1e6b14e9e4fab46173aa79f981/termcolor-1.1.0.tar.gz\n",
+      "Requirement already satisfied: msgpack-python in /opt/conda/lib/python3.6/site-packages (from thinc<6.11.0,>=6.10.1->spacy>=2.0.0->textacy) (0.5.6)\n",
+      "Collecting msgpack-numpy==0.4.1 (from thinc<6.11.0,>=6.10.1->spacy>=2.0.0->textacy)\n",
+      "  Downloading https://files.pythonhosted.org/packages/2e/43/393e30e2768b0357541ac95891f96b80ccc4d517e0dd2fa3042fc8926538/msgpack_numpy-0.4.1-py2.py3-none-any.whl\n",
+      "Requirement already satisfied: webencodings in /opt/conda/lib/python3.6/site-packages (from html5lib->ftfy<5.0.0,>=4.2.0->textacy) (0.5)\n",
+      "Building wheels for collected packages: python-levenshtein, spacy, pyemd, ftfy, murmurhash, cymem, preshed, thinc, pathlib, ujson, regex, wrapt, termcolor\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  Running setup.py bdist_wheel for python-levenshtein ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/de/c2/93/660fd5f7559049268ad2dc6d81c4e39e9e36518766eaf7e342\n",
+      "  Running setup.py bdist_wheel for spacy ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/fb/00/28/75c85d5135e7d9a100639137d1847d41e914ed16c962d467e4\n",
+      "  Running setup.py bdist_wheel for pyemd ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/e4/ba/b0/1f4178a35c916b22fc51dc56f278125d4b8cfb0592e5f0cc24\n",
+      "  Running setup.py bdist_wheel for ftfy ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/37/54/00/d320239bfc8aad1455314f302dd82a75253fc585e17b81704e\n",
+      "  Running setup.py bdist_wheel for murmurhash ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/b8/94/a4/f69f8664cdc1098603df44771b7fec5fd1b3d8364cdd83f512\n",
+      "  Running setup.py bdist_wheel for cymem ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/55/8d/4a/f6328252aa2aaec0b1cb906fd96a1566d77f0f67701071ad13\n",
+      "  Running setup.py bdist_wheel for preshed ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/8f/85/06/2d132fb649a6bbcab22487e4147880a55b0dd0f4b18fdfd6b5\n",
+      "  Running setup.py bdist_wheel for thinc ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/d8/5c/3e/9acf5d9974fb1c9e7b467563ea5429c9325f67306e93147961\n",
+      "  Running setup.py bdist_wheel for pathlib ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/f9/b2/4a/68efdfe5093638a9918bd1bb734af625526e849487200aa171\n",
+      "  Running setup.py bdist_wheel for ujson ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/28/77/e4/0311145b9c2e2f01470e744855131f9e34d6919687550f87d1\n",
+      "  Running setup.py bdist_wheel for regex ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/75/07/38/3c16b529d50cb4e0cd3dbc7b75cece8a09c132692c74450b01\n",
+      "  Running setup.py bdist_wheel for wrapt ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/48/5d/04/22361a593e70d23b1f7746d932802efe1f0e523376a74f321e\n",
+      "  Running setup.py bdist_wheel for termcolor ... \u001b[?25ldone\n",
+      "\u001b[?25h  Stored in directory: /home/jovyan/.cache/pip/wheels/7c/06/54/bc84598ba1daf8f970247f550b175aaaee85f68b4b0c5ab2c6\n",
+      "Successfully built python-levenshtein spacy pyemd ftfy murmurhash cymem preshed thinc pathlib ujson regex wrapt termcolor\n",
+      "\u001b[31mipywidgets 7.1.2 has requirement widgetsnbextension~=3.1.0, but you'll have widgetsnbextension 3.2.1 which is incompatible.\u001b[0m\n",
+      "\u001b[31mthinc 6.10.2 has requirement cytoolz<0.9,>=0.8, but you'll have cytoolz 0.9.0.1 which is incompatible.\u001b[0m\n",
+      "Installing collected packages: pyphen, cachetools, python-levenshtein, unidecode, ijson, murmurhash, cymem, preshed, wrapt, tqdm, plac, termcolor, pathlib, msgpack-numpy, thinc, ujson, regex, spacy, pyemd, ftfy, textacy\n",
+      "Successfully installed cachetools-2.0.1 cymem-1.31.2 ftfy-4.4.3 ijson-2.3 msgpack-numpy-0.4.1 murmurhash-0.28.0 pathlib-1.0.1 plac-0.9.6 preshed-1.0.0 pyemd-0.5.1 pyphen-0.9.4 python-levenshtein-0.12.0 regex-2017.4.5 spacy-2.0.11 termcolor-1.1.0 textacy-0.6.1 thinc-6.10.2 tqdm-4.23.0 ujson-1.35 unidecode-1.0.22 wrapt-1.10.11\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install textacy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -356,6 +486,18 @@
      "output_type": "stream",
      "text": [
       "Loading Libraries\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'mongo_host' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-6-ccb6fd7856f8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     29\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 31\u001b[0;31m \u001b[0;32mclass\u001b[0m \u001b[0mPolitiprocess\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     32\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     33\u001b[0m     \u001b[0mmodel_params\u001b[0m   \u001b[0;34m=\u001b[0m \u001b[0;34m'Topic_Extractor_Params.dat'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-6-ccb6fd7856f8>\u001b[0m in \u001b[0;36mPolitiprocess\u001b[0;34m()\u001b[0m\n\u001b[1;32m    156\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    157\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 158\u001b[0;31m     def mongo_query(host=mongo_host, port=mongo_port, mongo_db=mongo_db, mongo_collection=mongo_collection, \n\u001b[0m\u001b[1;32m    159\u001b[0m                     articles=True, custom_query=None, n_hours = n_hours, red_or_blue = red_or_blue, ALL=False):\n\u001b[1;32m    160\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'mongo_host' is not defined"
      ]
     }
    ],
@@ -517,69 +659,60 @@
     "\n",
     "\n",
     "    \n",
-    "    def mongo_query(host=mongo_host, port=mongo_port, mongo_db=mongo_db, mongo_collection=mongo_collection, \n",
-    "                    articles=True, custom_query=None, n_hours = n_hours, red_or_blue = red_or_blue, ALL=False):\n",
+    "#     def mongo_query(host=mongo_host, port=mongo_port, mongo_db=mongo_db, mongo_collection=mongo_collection, \n",
+    "#                     articles=True, custom_query=None, n_hours = n_hours, red_or_blue = red_or_blue, ALL=False):\n",
     "    \n",
-    "        if custom_query and ALL:\n",
-    "            raise ValueError(\"Cannot have custom query and ALL.\")\n",
+    "#         if custom_query and ALL:\n",
+    "#             raise ValueError(\"Cannot have custom query and ALL.\")\n",
     "        \n",
-    "        client = MongoClient(host=mongo_host, port=mongo_port)\n",
+    "#         client = MongoClient(host=mongo_host, port=mongo_port)\n",
     "        \n",
-    "        db = getattr(client, mongo_db)\n",
+    "#         db = getattr(client, mongo_db)\n",
     "        \n",
-    "        collection = getattr(db, mongo_collection)\n",
+    "#         collection = getattr(db, mongo_collection)\n",
     "        \n",
-    "        if ALL:\n",
-    "            df = pd.DataFrame(list(collection.find()))\n",
-    "            return df\n",
+    "#         if ALL:\n",
+    "#             df = pd.DataFrame(list(collection.find()))\n",
+    "#             return df\n",
     "        \n",
-    "        if custom_query:\n",
-    "            df = pd.DataFrame(list(collection.find(custom_query)))\n",
-    "            return df\n",
+    "#         if custom_query:\n",
+    "#             df = pd.DataFrame(list(collection.find(custom_query)))\n",
+    "#             return df\n",
     "        \n",
-    "        if articles:\n",
-    "            post = 'articles'\n",
-    "        else:\n",
-    "            post = 'documents'\n",
+    "#         if articles:\n",
+    "#             post = 'articles'\n",
+    "#         else:\n",
+    "#             post = 'documents'\n",
     "        \n",
-    "        query = {'is article': articles}\n",
+    "#         query = {'is article': articles}\n",
     "        \n",
-    "        if n_hours == 0:\n",
-    "            print(f\"Pulling all articles from {red_or_blue} targets.\")\n",
-    "        else:\n",
-    "            print(f\"Pulling {red_or_blue} articles from last {n_hours} hours.\")\n",
-    "            dt = datetime.utcnow() - timedelta(hours=n_hours)\n",
-    "            query['date'] = {'$gt': dt}\n",
+    "#         if n_hours == 0:\n",
+    "#             print(f\"Pulling all articles from {red_or_blue} targets.\")\n",
+    "#         else:\n",
+    "#             print(f\"Pulling {red_or_blue} articles from last {n_hours} hours.\")\n",
+    "#             dt = datetime.utcnow() - timedelta(hours=n_hours)\n",
+    "#             query['date'] = {'$gt': dt}\n",
     "        \n",
-    "        if red_or_blue == 'Red':\n",
-    "            query['target'] = True\n",
-    "        elif red_or_blue == 'Blue':\n",
-    "            query['target'] = False\n",
-    "        else:\n",
-    "            pass\n",
+    "#         if red_or_blue == 'Red':\n",
+    "#             query['target'] = True\n",
+    "#         elif red_or_blue == 'Blue':\n",
+    "#             query['target'] = False\n",
+    "#         else:\n",
+    "#             pass\n",
     "        \n",
-    "        df = pd.DataFrame(list(collection.find(query)))\n",
+    "#         df = pd.DataFrame(list(collection.find(query)))\n",
     "        \n",
-    "        print(f'''Completed pulling {len(df)} {post}.\n",
-    "        Latest article is from {collection.find_one(sort=[('date', -1)])['date']} UTC''')\n",
+    "#         print(f'''Completed pulling {len(df)} {post}.\n",
+    "#         Latest article is from {collection.find_one(sort=[('date', -1)])['date']} UTC''')\n",
     "        \n",
-    "        return df"
+    "#         return df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading Params\n",
-      "Required parameter \"Column to Vectorize\" is missing: 1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "pp = Politiprocess()"
    ]
