prep for scripting
getting docker container ready

--- a/politiprocess/NLP Notebook.ipynb
+++ b/politiprocess/NLP Notebook.ipynb
@@ -6,9 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PyQt5.uic import loadUiType\n",
-    "from PyQt5 import QtWidgets\n",
-    "from PyQt5 import QtCore, QtGui\n",
+    "# from PyQt5.uic import loadUiType\n",
+    "# from PyQt5 import QtWidgets\n",
+    "# from PyQt5 import QtCore, QtGui\n",
     "import textacy\n",
     "import spacy\n",
     "from spacy import displacy\n",
@@ -53,8 +53,8 @@
      "output_type": "stream",
      "text": [
       "Pulling All articles from last 48 hours.\n",
-      "Completed pulling 91 articles.\n",
-      "        Latest article is from 2018-05-04 12:13:40 UTC\n"
+      "Completed pulling 111 articles.\n",
+      "        Latest article is from 2018-05-04 18:16:45 UTC\n"
      ]
     }
    ],
@@ -4542,10 +4542,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from Topic_Modeler import Topic_Modeler\n",
+    "from collections import OrderedDict\n",
+    "\n",
+    "p.params.Query.Red_Blue_or_All = 'Red'\n",
+    "p.params.Query.Time_Frame_in_Hours = 100\n",
+    "topics = Topic_Modeler(connection.query_df, p.params)\n",
+    "topics.topic_modeler()\n",
+    "\n",
+    "x = topics.model.top_topic_terms(topics.vectorizer.id_to_term, top_n=20, weights=True)\n",
+    "\n",
+    "topic_list = []\n",
+    "for y in x:\n",
+    "    topic_list.append(y[1])\n",
+    "\n",
+    "topic_list.sort(key=lambda dic: dic[0][1], reverse=True)\n",
+    "\n",
+    "topic_dict = OrderedDict()\n",
+    "for x  in topic_list:\n",
+    "    temp_list = []\n",
+    "    for y in x:\n",
+    "        temp_list.append(y)\n",
+    "    \n",
+    "    topic_dict[x[0][0]] = temp_list\n",
+    "\n",
+    "with open('data.json', 'w') as fp:\n",
+    "    json.dump(topic_dict, fp, indent=1)"
+   ]
   }
  ],
  "metadata": {
